Uploaded image for project: 'Celix'
  1. Celix
  2. CELIX-59

Remote service examples generate segmentation fault on start.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.0.0-incubating
    • None
    • None
    • Centos 5,

    Description

      The current version on svn, Revision 1485109, contains a bug which causes the remote service examples to crash on start.

      This bug is caused by missing bundles in deployment and errors in the discovery, the topology manager and the framework.

      Attachments

        1. celix.patch
          5 kB
          Erik Jansman

        Activity

          People

            Unassigned Unassigned
            erikjansman Erik Jansman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: