CELIX-59: Applied patch partially.

Left out the change to the topology manager's activator. Supplying a NULL properties should work.

git-svn-id: https://svn.apache.org/repos/asf/incubator/celix/trunk@1485122 13f79535-47bb-0310-9956-ffa450edef68