remote_services/deploy.cmake
@@ -16,6 +16,6 @@
 # under the License.
 is_enabled(REMOTE_SERVICE_ADMIN)
 if (REMOTE_SERVICE_ADMIN)
-	deploy("remote-services" BUNDLES discovery topology_manager remote_service_admin example shell shell_tui log_service log_writer)
-	deploy("remote-services-client" BUNDLES discovery topology_manager remote_service_admin shell shell_tui log_service log_writer calc_shell)
+	 deploy("remote-services" BUNDLES discovery topology_manager remote_service_admin example example_endpoint shell shell_tui log_service log_writer)
+	deploy("remote-services-client" BUNDLES discovery topology_manager remote_service_admin example_proxy shell shell_tui log_service log_writer calc_shell)
 endif (REMOTE_SERVICE_ADMIN)
